# aiotieba

./: .clang-format  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  Publish.yml  README.md  StatDatabase_pb2.py  admin_listen.py  admin_listen_asoul.py  admin_operation.py  asoul_vote.py  block_cycle.py  cibuildwheel.toml  cloud_review_asoul.py  cloud_review_diana.py  cloud_review_hanime.py  cloud_review_soulknight.py  cloud_review_vtuber.py  cmd_handler.py  data_analyzer.py  data_spider.py  debug.py  forumlike.py  mkdocs.yml  mysql_operation.py  pyproject.toml  pytest.ini  requirements.txt  restart.sh  ruff.toml  setup.py  sign.py  spider.py  sql_operation.py  temp.py  tutorial-00-获取用户个人信息.py  tutorial-00-配置BDUSS并获取个人信息.py  tutorial-01-并发任务获取主题帖.py  (+4 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  discussion.md  feature_request.md
.github/test/: config.toml.gpg  config.yaml.gpg  prepare.sh  test_all.py
.github/workflows/: CI-beta.yml  CI.yaml  CI.yml  Pages.yml  Publish.yaml  Publish.yml  aiotieba.toml.gpg  basic_test.yaml  codeql.yaml  codeql.yml  python_basic_check.yaml  python_basic_test.yaml  requirements_test.txt  test.py
aiotieba/: __init__.py  __version__.py  _api.py  _config.py  _exception.py  _exceptions.py  _helper.py  _helpers.py  _logger.py  _logging.py  _types.py  account.py  api.py  client.py  config.py  const.py  database.py  enums.py  exception.py  helpers.py  log.py  logger.py  logging.py  paths.py  reviewer.py  typedef.py  typedefs.py  types.py  typing.py
aiotieba/client/: __init__.py  _client.py  _core.py  _exception.py  _helper.py  _typing.py  add_post.py  agree.py  blacklist_add.py  blacklist_del.py  block.py  command  const.py  del_post.py  del_posts.py  del_thread.py  del_threads.py  dislike_forum.py  follow_forum.py  follow_user.py  get_ats.py  get_blacklist_users.py  get_cid.py  get_fans.py  get_fid.py  get_follow_forums.py  get_follows.py  get_forum_detail.py  get_image.py  get_member_users.py  get_newmsg.py  get_rank_users.py  get_recom_status.py  get_recom_threads.py  get_recovers.py  get_self_follow_forums.py  get_selfinfo_initNickname.py  get_statistics.py  get_uinfo_getUserInfo.py  get_uinfo_panel.py  (+20 more)
aiotieba/config_example/: full.toml  full.yaml  minimal.toml  minimal.yaml
aiotieba/core/: __init__.py  account.py  blcp.py  http.py  net.py  network.py  websocket.py
aiotieba/helper/: __init__.py  cache.py  utils.py
aiotieba/helper/crypto/: CMakeLists.txt  __init__.py  _const.h  _cuid.c  _cuid.h  _error.h  _python.h  _sign.c  _sign.h  _zid.c  _zid.h  const.h  crypto.c  crypto.pyi  cuid.c  cuid.h  sign.c  sign.h  utils.h  zid.c  zid.h
aiotieba/helper/crypto/include/base32/: base32.h
aiotieba/helper/crypto/include/mbedtls/: common.h
aiotieba/helper/crypto/include/rapidjson/: itoa.h
aiotieba/helper/crypto/include/tbcrypto/: bb64.h  const.h  cuid.h  pywrap.h  sign.h  utils.h  zid.h
aiotieba/helper/crypto/src/base32/: base32.c
aiotieba/helper/crypto/src/crc/: crc32.c
aiotieba/helper/crypto/src/mbedtls/: md5.c  sha1.c
aiotieba/helper/crypto/src/tbcrypto/: bb64.c  cuid.c  lib.c  rc442.c  sign.c  zid.c
aiotieba/protobuf/: Agree.proto  CommitPersonalMsgReqIdl.proto  CommitPersonalMsgReqIdl_pb2.py  CommitPersonalMsgResIdl.proto  CommitPersonalMsgResIdl_pb2.py  CommonReq.proto  CommonReq_pb2.py  Error.proto  FrsPageReqIdl.proto  FrsPageReqIdl_pb2.py  FrsPageResIdl.proto  FrsPageResIdl_pb2.py  FrsTabInfo.proto  GetBawuInfoReqIdl_pb2.py  GetBawuInfoResIdl.proto  GetDislikeListReqIdl.proto  GetDislikeListResIdl.proto  GetDislikeListResIdl_pb2.py  GetForumSquareReqIdl.proto  GetForumSquareReqIdl_pb2.py  GetForumSquareResIdl.proto  GetUserByTiebaUidReqIdl.proto  GetUserByTiebaUidResIdl.proto  GetUserByTiebaUidResIdl_pb2.py  GetUserInfoReqIdl.proto  GetUserInfoReqIdl_pb2.py  GetUserInfoResIdl.proto  GetUserInfoResIdl_pb2.py  NewThreadInfo.proto  NewThreadInfo_pb2.py  Page.proto  Page_pb2.py  PbContent.proto  PbContent_pb2.py  PbFloorReqIdl.proto  PbFloorReqIdl_pb2.py  PbFloorResIdl.proto  PbFloorResIdl_pb2.py  PbPageReqIdl.proto  PbPageReqIdl_pb2.py  (+29 more)
aiotieba/request/: __init__.py  common.py  http.py  websocket.py
aiotieba/tieba_proto/: CommitPersonalMsgReqIdl_pb2.py  FrsPageResIdl_pb2.py  GetUserInfoReqIdl_pb2.py  PbPageReqIdl_pb2.py  SearchPostForumReqIdl_pb2.py  ThreadInfo_pb2.py
aiotieba/tieba_protobuf/: CommitPersonalMsgResIdl_pb2.py  GetDislikeListReqIdl_pb2.py  GetForumSquareResIdl_pb2.py  GetUserByTiebaUidReqIdl_pb2.py  GetUserByTiebaUidResIdl_pb2.py  PbFloorReqIdl_pb2.py  ReplyMeResIdl_pb2.py  SearchPostForumResIdl_pb2.py  SimpleForum_pb2.py  ThreadInfo_pb2.py  UpdateClientInfoResIdl_pb2.py  UserPostResIdl_pb2.py  User_pb2.py  __init__.py
config/: block_control.json  block_cycle_10.json  config-example.json  config-example.yaml  listen_config-example.json  listen_config-example.yaml  listen_config.json
docs/: CNAME  README.md  cloud_review_tutorial.md  command_tutorial.md  index.md  many_utils.md  tutorial.md
docs/css/: custom.css
docs/misc/: websocket_reverse_engineering.md
docs/ref/: classdef.md  client.md  config.md  enum.md  enums.md  exception.md  typedef.md  (+1 more)
examples/: cmd_handler.py  reviewer_example.py
scripts/: proto_compile.py
tests/: aiotieba.toml.gpg  conftest.py  requirements.txt  test_all.py  test_clib.py  test_crypto.py  test_db.py  test_get_ats.py  test_get_blocks.py  test_get_comments.py  test_get_fans.py  test_get_follow_forums.py  test_get_follows.py  test_get_forum_detail.py  test_get_homepage.py  test_get_image.py  test_get_posts.py  test_get_recovers.py  test_get_threads.py  test_get_user_info.py  test_get_user_posts.py
tiebaBrowser/: __init__.py  _api.py  _config.py  _logger.py  _types.py  api.py  browser.py  cloud_review.py  config.py  core.py  data_structure.py  database.py  logger.py  mysql.py  reviewer.py  utils.py
tutorials/: README.md  tutorial.md  websocket_reverse_engineering.md
wikis/: README.md  cloud_review_introduction.md  cloud_review_tutorial.md  many_utils.md  tutorial.md
(+1026 files in other folders)
